assets/css/style.css
/* ... */
.from-yellow-400 {
    --tw-gradient-from:#facc15 var(--tw-gradient-from-position);
    --tw-gradient-to:rgb(250 204 21 / 0) var(--tw-gradient-to-position);
    --tw-gradient-stops:var(--tw-gradient-from), var(--tw-gradient-to);
}
.to-amber-500 {
    --tw-gradient-to:#f59e0b var(--tw-gradient-to-position);
}
.to-indigo-500 {
    --tw-gradient-to:#6366f1 var(--tw-gradient-to-position);
}
.to-orange-500 {
    --tw-gradient-to:#f97316 var(--tw-gradient-to-position);
}
.to-purple-500 {
    --tw-gradient-to:#a855f7 var(--tw-gradient-to-position);
}
.bg-clip-text {
    -webkit-background-clip:text;
            background-clip:text;
}
.p-2 {
    padding:0.5rem;
}
.p-4 {
    padding:1rem;
}
.p-8 {
    padding:2rem;
}
.px-8 {
    padding-left:2rem;
    padding-right:2rem;
}
.pl-6 {
    padding-left:1.5rem;
}
.pr-2 {
    padding-right:0.5rem;
}
.pt-0 {
    padding-top:0px;
}
.pt-2 {
    padding-top:0.5rem;
}
.text-left {
    text-align:left;
}
.align-top {
    vertical-align:top;
}
.text-2xl {
    font-size:1.5rem;
    line-height:2rem;
}
.text-sm {
    font-size:0.875rem;
    line-height:1.25rem;
}
.text-xs {
    font-size:0.75rem;
    line-height:1rem;
}
.font-bold {
    font-weight:700;
}
.font-light {
    font-weight:300;
}
.font-semibold {
    font-weight:600;
}
.lowercase {
    text-transform:lowercase;
}
.italic {
    font-style:italic;
}
.ordinal {
    --tw-ordinal:ordinal;
    font-variant-numeric:var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
}
.text-blue-400 {
    --tw-text-opacity:1;
    color:rgb(96 165 250 / var(--tw-text-opacity));
}
.text-transparent {
    color:transparent;
}
.text-yellow-400 {
    --tw-text-opacity:1;
    color:rgb(250 204 21 / var(--tw-text-opacity));
}
.text-zinc-500 {
    --tw-text-opacity:1;
    color:rgb(113 113 122 / var(--tw-text-opacity));
}
.shadow {
    --tw-shadow:0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
    --tw-shadow-colored:0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
    box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}
@media (prefers-color-scheme: dark) {

    .dark\:prose-invert {
        --tw-prose-body:var(--tw-prose-invert-body);
        --tw-prose-headings:var(--tw-prose-invert-headings);
        --tw-prose-lead:var(--tw-prose-invert-lead);
        --tw-prose-links:var(--tw-prose-invert-links);
        --tw-prose-bold:var(--tw-prose-invert-bold);
        --tw-prose-counters:var(--tw-prose-invert-counters);
        --tw-prose-bullets:var(--tw-prose-invert-bullets);
        --tw-prose-hr:var(--tw-prose-invert-hr);
        --tw-prose-quotes:var(--tw-prose-invert-quotes);
        --tw-prose-quote-borders:var(--tw-prose-invert-quote-borders);
        --tw-prose-captions:var(--tw-prose-invert-captions);
        --tw-prose-kbd:var(--tw-prose-invert-kbd);
        --tw-prose-kbd-shadows:var(--tw-prose-invert-kbd-shadows);
        --tw-prose-code:var(--tw-prose-invert-code);
        --tw-prose-pre-code:var(--tw-prose-invert-pre-code);
        --tw-prose-pre-bg:var(--tw-prose-invert-pre-bg);
        --tw-prose-th-borders:var(--tw-prose-invert-th-borders);
        --tw-prose-td-borders:var(--tw-prose-invert-td-borders);
    }
}
.\*\:mt-0 > * {
    margin-top:0px;
}
.\*\:inline > * {
    display:inline;
}
.\*\:py-1 > * {
    padding-top:0.25rem;
    padding-bottom:0.25rem;
}
.\*\:text-sm > * {
    font-size:0.875rem;
    line-height:1.25rem;
}
.\*\:text-xs > * {
    font-size:0.75rem;
    line-height:1rem;
}
.prose-headings\:font-normal :is(:where(h1, h2, h3, h4, h5, h6, th):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
    font-weight:400;
}
.prose-a\:font-normal :is(:where(a):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
    font-weight:400;
}
@media not all and (min-width: 1024px) {

    .max-lg\:-mt-16 {
        margin-top:-4rem;
    }

    .max-lg\:hidden {
        display:none;
    }
}
@media not all and (min-width: 768px) {

    .max-md\:p-4 {
        padding:1rem;
    }
}
@media (min-width: 1024px) {

    .lg\:m-16 {
        margin:4rem;
    }

    .lg\:my-10 {
        margin-top:2.5rem;
        margin-bottom:2.5rem;
    }

    .lg\:hidden {
        display:none;
    }
}
@media (prefers-color-scheme: dark) {

    .dark\:bg-zinc-800 {
        --tw-bg-opacity:1;
        background-color:rgb(39 39 42 / var(--tw-bg-opacity));
    }

    .dark\:text-slate-50 {
        --tw-text-opacity:1;
        color:rgb(248 250 252 / var(--tw-text-opacity));
    }
}

